------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.14.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.14.rst'


* Added new checker ``typevar-double-variance``: The "covariant" and "contravariant" keyword arguments
  cannot both be set to "True" in a TypeVar.

  Closes ##5895

* Re-enable checker ``bad-docstring-quotes`` for Python <= 3.7.

  Closes #6087

* Exclude dunder calls on super() from raising ``unnecessary-dunder-call``.

  Closes #6074

* Removed the broken ``generate-man`` option.

  Closes #5283
  Closes #1887

* Add new check ``unnecessary-dunder-call`` for unnecessary dunder method calls.

  Closes #5936

* ``potential-index-error``: Emitted when the index of a list or tuple exceeds its length.
  This checker is currently quite conservative to avoid false positives. We welcome
  suggestions for improvements.

  Closes #578

* Added new checker ``unnecessary-list-index-lookup`` for indexing into a list while
  iterating over ``enumerate()``.

  Closes #4525

* Fix false negative for ``no-member`` when attempting to assign an instance
  attribute to itself without any prior assignment.

  Closes #1555

* The concept of checker priority has been removed.

* ``duplicate-argument-name`` now only raises once for each set of duplicated arguments.

* Fix bug where specifically enabling just ``await-outside-async`` was not possible.

* The ``set_config_directly`` decorator has been removed.

* Added new message called ``duplicate-value`` which identifies duplicate values inside sets.

  Closes #5880

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.5?
============================
Release date: TBA

* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
  homonyms between variable assignments in try/except blocks and variables in
  subscripts in comprehensions.
