@@ -1,0 +1,12 @@
+from enum import Enum
+
+
+class Color(Enum):
+    ORANGE = 1
+    CHERRY = 2
+
+
+class Fruit(Enum):
+    ORANGE = 1
+    CHERRY = 2
+    APPLE = 3
