@@ -626,6 +626,12 @@ MSGS = {  # pylint: disable=consider-using-namedtuple-or-dataclass
         "Used when an invalid object is assigned to a __class__ property. "
         "Only a class is permitted.",
     ),
+    "E0244": (
+        'Extending inherited Enum class "%s"',
+        "invalid-enum-extension",
+        "Used when a class tries to extend an inherited Enum class. "
+        "Doing so will raise a TypeError at runtime.",
+    ),
     "R0202": (
         "Consider using a decorator instead of calling classmethod",
         "no-classmethod-decorator",
@@ -790,6 +796,7 @@ a metaclass class method.",
         "inconsistent-mro",
         "duplicate-bases",
         "redefined-slots-in-subclass",
+        "invalid-enum-extension",
     )
     def visit_classdef(self, node: nodes.ClassDef) -> None:
         """Init visit variable _accessed."""
@@ -834,6 +841,18 @@ a metaclass class method.",
                 ancestor
             ):
                 self.add_message("inherit-non-class", args=base.as_string(), node=node)
+
+            if (
+                isinstance(ancestor, nodes.ClassDef)
+                and ancestor.is_subtype_of("enum.Enum")
+                and any(isinstance(stmt, nodes.Assign) for stmt in ancestor.body)
+            ):
+                self.add_message(
+                    "invalid-enum-extension",
+                    args=ancestor.name,
+                    node=node,
+                    confidence=INFERENCE,
+                )
 
             if ancestor.name == object.__name__:
                 self.add_message(
